<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.AppCompat.NoActionBar"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bkg"
        />
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/notepad_anim"
        android:layout_width="match_parent"
        android:layout_height="350sp"
        app:lottie_autoPlay="true"
        app:lottie_rawRes="@raw/profileanimation"
        app:lottie_loop="true"
        app:lottie_speed="1.2"
        android:layout_marginBottom="-40sp"
        />
    <TextView
        android:id="@+id/accountloginheader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/who_are_you"
        android:textColor="@color/black"
        android:elegantTextHeight="true"
        android:elevation="@dimen/cardview_default_elevation"
        android:textSize="60sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:fontFamily="sans-serif-black"
        android:layout_below="@+id/notepad_anim"
        android:layout_marginBottom="-25sp"
        />
    <TextView
        android:id="@+id/accountloginmessege"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_with_your_credentials"
        android:textColor="@color/black"
        android:elegantTextHeight="true"
        android:elevation="@dimen/cardview_default_elevation"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:fontFamily="sans-serif-black"
        android:layout_below="@+id/accountloginheader"
        android:padding="-30sp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernamefield"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxStrokeColor="@color/black"
        app:hintTextColor="@color/black"
        android:textColorHint="@color/black"
        app:errorTextColor="@color/black"
        app:boxBackgroundColor="@color/white"
        android:hint="@string/username"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:layout_below="@id/accountloginmessege"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/usernamefieldtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"

            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordfield"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxStrokeColor="@color/black"
        app:hintTextColor="@color/black"
        android:textColorHint="@color/black"
        app:errorTextColor="@color/black"
        app:boxBackgroundColor="@color/white"
        android:hint="@string/password"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:layout_below="@id/usernamefield"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordfieldtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:inputType="textPassword"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phonefield"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxStrokeColor="@color/black"
        app:hintTextColor="@color/black"
        android:textColorHint="@color/black"
        app:errorTextColor="@color/black"
        app:boxBackgroundColor="@color/white"
        android:hint="@string/phone_number"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:layout_below="@id/passwordfield"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phonefieldtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/registerbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_marginStart="45sp"
        android:layout_marginEnd="45sp"
        android:layout_marginTop="30sp"
        android:layout_below="@id/phonefield"
        />


</RelativeLayout>